--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fileuploader-react",
+  "homepage": "https://milena-mile.github.io/fileuploader-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +8,14 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "firebase": "^10.12.2",
+    "gh-pages": "^6.1.1",
     "lodash": "^4.15.0",
     "node": "^22.3.0",
     "react": "^18.2.0",
